Uploading changes to the swagger documentation
